{
  "version": 4,
  "terraform_version": "0.13.0",
  "serial": 226,
  "lineage": "e3a2db4d-6fa6-b4e7-ce7f-240828bc33de",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_devops",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-000792f2117324fc6",
            "arn": "arn:aws:ec2:ap-southeast-1:805348933619:instance/i-047666bd43b49a4a4",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-047666bd43b49a4a4",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "kp_devops",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-05640f7d3093b3a9e",
            "private_dns": "ip-10-0-0-174.ap-southeast-1.compute.internal",
            "private_ip": "10.0.0.174",
            "public_ip": "18.141.213.201",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0902b6d265eef5324",
                "volume_size": 25,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fb6eb7492f66f600",
            "tags": {
              "Name": "ec2_devops"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-08a1968eefa67dd7e"
            ]
          },
          "dependencies": [
            "aws_security_group.sg_devops",
            "aws_subnet.sub_public_devops",
            "aws_vpc.vpc_devops"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:805348933619:internet-gateway/igw-0bd18827823d5f24c",
            "id": "igw-0bd18827823d5f24c",
            "owner_id": "805348933619",
            "tags": {
              "Name": "gw_devops"
            },
            "vpc_id": "vpc-0017ded13904b68fa"
          },
          "dependencies": [
            "aws_vpc.vpc_devops"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "Public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0bd18827823d5f24c",
            "id": "r-rtb-0cba10c5833747ed41080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0cba10c5833747ed4",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.vpc_devops"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_devops",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:805348933619:security-group/sg-08a1968eefa67dd7e",
            "description": "Allow ssh and http inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08a1968eefa67dd7e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH Access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Tomcat access",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sg_devops",
            "name_prefix": "",
            "owner_id": "805348933619",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg_devops"
            },
            "timeouts": null,
            "vpc_id": "vpc-0017ded13904b68fa"
          },
          "dependencies": [
            "aws_vpc.vpc_devops"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sub_public_devops",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:805348933619:subnet/subnet-0fb6eb7492f66f600",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0fb6eb7492f66f600",
            "map_public_ip_on_launch": false,
            "owner_id": "805348933619",
            "tags": {
              "Name": "sub_public_devops"
            },
            "vpc_id": "vpc-0017ded13904b68fa"
          },
          "dependencies": [
            "aws_vpc.vpc_devops"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_devops",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:805348933619:vpc/vpc-0017ded13904b68fa",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0934aeae84d901072",
            "default_route_table_id": "rtb-0cba10c5833747ed4",
            "default_security_group_id": "sg-07bcd7cb203612a2f",
            "dhcp_options_id": "dopt-60120807",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0017ded13904b68fa",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0cba10c5833747ed4",
            "owner_id": "805348933619",
            "tags": {
              "Name": "vpc_devops"
            }
          }
        }
      ]
    }
  ]
}